Socketio communicate between customer, chef and waiter
